# InventoryApp

./: CMakeLists.txt  README.md  TESTING.md  run_tests.bat  run_tests.sh
.github/workflows/: cmake-multi-platform.yml
Scripts/: Setup_Repo.bat
include/: Inventory.h  Item.h  MainWindow.h
src/: Inventory.cpp  Item.cpp  MainWindow.cpp
tests/: test_inventory.cpp  test_item.cpp
ui/: MainWindow.ui
